Replace URL : cdn.cmds.run

--- a/rawgithack.conf
+++ b/rawgithack.conf
@@ -15,7 +15,7 @@ proxy_cache_path /var/cache/nginx/rawgithack
 limit_req_zone $throttle zone=throttling:10m rate=10r/s;
 
 map $host $throttle {
-    ~*^\w+cdn\.githack\.com$ "";
+    ~*^\w+cdn\.cmds\.run$ "";
     default $referer_domain$uri;
 }
 
@@ -84,22 +84,22 @@ map $detect_content_type $detect_content_type_with_fallback {
 }
 
 map $host $origin {
-    ~*^gl(cdn)?\.githack\.com$ gitlab.com;
-    ~*^bb(cdn)?\.githack\.com$ bitbucket.org;
-    ~*^raw(cdn)?\.githack\.com$ raw.githubusercontent.com;
-    ~*^gist(cdn)?\.githack\.com$ gist.githubusercontent.com;
-    ~*^srht(cdn)?\.githack\.com$ git.sr.ht;
-    ~*^srhgt(cdn)?\.githack\.com$ hg.sr.ht;
+    ~*^gl(-dev)?\.cmds\.run$ gitlab.com;
+    ~*^bb(-dev)?\.cmds\.run$ bitbucket.org;
+    ~*^raw(-dev)?\.cmds\.run$ raw.githubusercontent.com;
+    ~*^gist(-dev)?\.cmds\.run$ gist.githubusercontent.com;
+    ~*^srht(-dev)?\.cmds\.run$ git.sr.ht;
+    ~*^srhgt(-dev)?\.cmds\.run$ hg.sr.ht;
 }
 
 map $status:$host $cache_control {
-    ~*^2\d\d:\w+cdn\.githack\.com$ 'public, immutable';
-    ~*^3\d\d:\w+cdn\.githack\.com$ 'public, immutable';
+    ~*^2\d\d:\w+cdn\.cmds\.run$ 'public, immutable';
+    ~*^3\d\d:\w+cdn\.cmds\.run$ 'public, immutable';
     default 'max-age=300, public';
 }
 
 map $host $expires {
-    ~*^\w+cdn\.githack\.com$ 1y;
+    ~*^\w+cdn\.cmds\.run$ 1y;
     default 5m;
 }
 
@@ -123,8 +123,8 @@ server {
 
     location / {
         expires 1d;
-        if ($host != 'raw.githack.com') {
-            return 301 $scheme://raw.githack.com$uri$is_args$args;
+        if ($host != 'cdn.cmds.run') {
+            return 301 $scheme://cdn.cmds.run/;
         }
         if ($uri = '/index') {
             ssi on;
